added two new routes to changed a users username and delete a friend
