# Backend/src/routes/users/friends/deleteFriend.js
@@ -1,13 +1,12 @@
 import db from "../../../database.js";
 import { getUserbyId } from "../../../utils/utils.js";
 
-export default function addFriends(server) {
+export default function deleteFriend(server) {
 	const opts = {
 		schema: {
 			tags: ["user"],
 			description:
-				"Adds a new friend to the authenticated user's friend list.\
-						The friend_id provided in the request body is validated before the friendship record is created.\
+				"Deletes a friend from the authenticated user's friend list using the id passed in the body.\
 						`This endpoint requires client authentication AND user authentication.`",
 
 			security: server.security.UserAuth,
@@ -15,17 +14,11 @@ export default function addFriends(server) {
 				type: "object",
 				required: ["friend_id"],
 				properties: {
-					friend_id: { type: "integer", minimum: 1 },
+					friend_id: { type: "integer"},
 				},
 			},
 			response: {
-				201: {
-					type: "object",
-					properties: {
-						success: { type: "boolean" },
-						message: { type: "string" },
-					},
-				},
+				204: { type: "null" },
 				404: {
 					type: "object",
 					properties: {
@@ -46,14 +39,14 @@ export default function addFriends(server) {
 			const { friend_id } = req.body;
 			const user = await getUserbyId(friend_id, db);
 			if (!user) {
-				return reply.status(404).send({ error: "Friend id not found" });
+				return reply.status(404).send({ error: "Friend not found" });
 			}
 			console.log(user);
 
 			req.friend = user;
 		},
 	};
-	server.post("/me/friends", opts, (req, reply) => {
+	server.delete("/me/friends", opts, (req, reply) => {
 		try {
 			const userId = req.user.id;
 			const friendId = req.friend.id;
@@ -61,12 +54,17 @@ export default function addFriends(server) {
 			if (userId == friendId) {
 				return reply.status(400).send({ error: "User id and friend_id cannot be the same" });
 			}
-			db.prepare(`INSERT INTO friends(user_id, friend_id) VALUES (?,?)`).run(userId, friendId);
-			reply.status(201).send({ success: true, message: `Sucessfully added ${req.friend.username} to ${req.user.username}'s friend list` });
+
+			//check if they are friends before trying to delete
+			const friend = db.prepare(`SELECT * FROM friends WHERE user_id = ? AND friend_id = ?`).get(userId, friendId);
+			if (!friend)
+				return reply.status(400).send({
+					error: `User ${req.user.username} is not friend with ${req.friend.username}`,
+				});
+
+			db.prepare(`DELETE FROM friends WHERE user_id = ? AND friend_id = ?`).run(userId, friendId);
+			return reply.status(204).send();
 		} catch (err) {
-			if (err.code == "SQLITE_CONSTRAINT_PRIMARYKEY") {
-				return reply.status(400).send({ error: `User ${req.user.username} is already friend with ${req.friend.username}` });
-			}
 			console.log(err);
 			return reply.status(500).send({ error: "Internal server error" });
 		}
